refactor(racingcar): 전체적인 구조 리팩토링
- Cars 클래스의 책임이 두개라 CarsValidator를 생성해 분리
- 전체적인 상수를 Constants 에서 관리하도록 변경
- strategy 를 주입으로 변경하여 객체지향적 설계로 변경
- cars 를 CarFactory로 만들게 변경
- 변경점에 따른 테스트 코드 수정