@@ -1,83 +1,42 @@
 package racingcar.domain;
 
-import java.util.ArrayList;
-
-import java.util.HashSet;
 import java.util.List;
-import java.util.Set;
-import racingcar.error.ErrorMessages;
-import racingcar.util.RandomMoveCondition;
+import java.util.stream.Collectors;
+import racingcar.dto.CarStatusDTO;
+import racingcar.util.Constants;
 
 public class Cars {
 
-  private static final String DELIMITER = ",";
-  private static final String STATUS_FORMAT = "%s : %s";
-  private static final String POSITION_SYMBOL = "-";
-  private final List<Car> cars;
+  private final List<Car> carList;
 
-  public Cars(String input) {
-    validateInput(input);
-    this.cars = parseCarNames(input);
+  public Cars(List<Car> carList) {
+    this.carList = carList;
   }
 
   public void moveCars() {
-    cars.forEach(car -> {
-      if (RandomMoveCondition.isMovable()) {
-        car.move();
-      }
-    });
+    for (Car car : this.carList) {
+      car.move();
+    }
   }
 
-  public List<String> getAllCarStatuses() {
-    return cars.stream()
-        .map(car -> String.format(STATUS_FORMAT, car.getName(),
-            POSITION_SYMBOL.repeat(car.getPosition())))
-        .toList();
+  public List<CarStatusDTO> getCarStatuses() {
+    return this.carList.stream()
+        .map(Car::carStatusDTO)
+        .collect(Collectors.toList());
   }
 
   public List<String> findWinners() {
     int maxPosition = findMaxPosition();
-    return cars.stream()
-        .filter(car -> car.getPosition() == maxPosition)
-        .map(Car::getName)
-        .toList();
+    return this.carList.stream()
+        .filter(car -> car.isAtPosition(maxPosition))
+        .map(Car::getNameValue)
+        .collect(Collectors.toList());
   }
 
   private int findMaxPosition() {
-    return cars.stream()
-        .mapToInt(Car::getPosition)
+    return this.carList.stream()
+        .mapToInt(Car::getPositionValue)
         .max()
-        .orElse(0);
-  }
-
-  private void validateInput(String input) {
-    if (input == null || input.isEmpty()) {
-      throw new IllegalArgumentException(ErrorMessages.INPUT_EMPTY);
-    }
-  }
-
-  private List<Car> parseCarNames(String input) {
-    String[] carNamesArray = input.split(DELIMITER);
-    Set<String> uniqueNames = validateUniqueNames(carNamesArray);
-    return createCarList(uniqueNames);
-  }
-
-  private Set<String> validateUniqueNames(String[] carNamesArray) {
-    Set<String> uniqueNames = new HashSet<>();
-    for (String name : carNamesArray) {
-      String trimmedName = name.trim();
-      if (!uniqueNames.add(trimmedName)) {
-        throw new IllegalArgumentException(ErrorMessages.CAR_NAME_DUPLICATE);
-      }
-    }
-    return uniqueNames;
-  }
-
-  private List<Car> createCarList(Set<String> uniqueNames) {
-    List<Car> carList = new ArrayList<>();
-    for (String name : uniqueNames) {
-      carList.add(new Car(name));
-    }
-    return carList;
+        .orElse(Constants.CAN_NOT_PLAY_COUNT);
   }
 }
